# DataLoader

./: .gitignore  CMakeLists.txt  Polygon-4.sql  dbmgr.py
data/: 0001.first_string.json  0002.first_group.json  0003.first_clan.json  0010.equipments.json  0015.goods.json  0016.projectiles.json  0017.weapons.json  0018.clans.json  0019.modificators.json  0020.buildings.json  0020.gliders.json  0030.buildings.json  0030.objects.json  0040.gliders.json  0050.maps.json  0070.first_mech.json  0100.mods.json  Polygon-4.sql  Polygon4.ndm  Polygon4.sql  schema.txt
scripts/: dbmgr.py  dbmgr_load.bat  dbmgr_merge.bat  dbmgr_save.bat
src/: CMakeLists.txt  ast.h  context.cpp  context.h  data.cpp  data.h  grammar.yy  lexer.ll  main.cpp  types.h
